...
}

- (void)viewDidLoad {
    [super viewDidLoad];

    self.view.backgroundColor = [UIColor hx_randomColor];
    self.navigationItem.title = @"RAC Example";

}


#pragma mark - Table view data source

...
